# fastapi-taskmaster-coverage

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cspell.config.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer-compose.yml  devcontainer.env  devcontainer.json
alembic/: env.py
alembic/versions/: e92bb811f929_.py
taskmaster/: main.py  models.py  schemas.py
taskmaster/api/: main.py
taskmaster/api/routers/: todos.py
taskmaster/core/: config.py  database.py  exceptions.py
taskmaster/enums/: todo_enums.py
tests/: conftest.py  factories.py  test_database.py  test_main.py  test_todos.py
